--- a/app/src/main/res/layout/fragment_perfil.xml
+++ b/app/src/main/res/layout/fragment_perfil.xml
@@ -6,106 +6,51 @@
     android:layout_height="match_parent">
 
 
-    <ImageView
-        android:id="@+id/fotoImg"
-        android:layout_width="411dp"
-        android:layout_height="272dp"
-        android:src="@drawable/img_1"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
-    <ImageView
-        android:id="@+id/imageView3"
-        android:layout_width="48dp"
-        android:layout_height="48dp"
-        android:layout_marginStart="183dp"
-        android:layout_marginTop="77dp"
-        android:layout_marginEnd="180dp"
-        android:layout_marginBottom="147dp"
-        android:src="@drawable/camera"
-        app:layout_constraintBottom_toBottomOf="@+id/fotoImg"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/fotoImg"
-        app:srcCompat="@drawable/camera" />
-
-    <TextView
-        android:id="@+id/imgText"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
-        android:layout_marginStart="40dp"
-        android:layout_marginTop="162dp"
-        android:layout_marginEnd="37dp"
-        android:layout_marginBottom="45dp"
-        android:fontFamily="@font/roboto_regular"
-        android:text="Ninguna imagen para mostrar"
-        android:textAlignment="center"
-        android:textColor="#000000"
-        android:textSize="18dp"
-        app:layout_constraintBottom_toBottomOf="@+id/fotoImg"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="@+id/fotoImg"
-        app:layout_constraintTop_toTopOf="@+id/fotoImg"
-        app:lineHeight="21.09px" />
-
     <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/constraintLayout"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_marginStart="21dp"
-        android:layout_marginTop="340dp"
-        android:layout_marginEnd="22dp"
-        android:layout_marginBottom="165dp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="32dp"
         android:padding="22dp"
-        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.0">
+        app:layout_constraintTop_toBottomOf="@+id/imageView">
 
         <TextView
             android:id="@+id/titleNeg"
             android:layout_width="0dp"
-            android:layout_height="0dp"
+            android:layout_height="wrap_content"
             android:layout_marginStart="73dp"
             android:layout_marginTop="5dp"
             android:layout_marginEnd="73dp"
-            android:layout_marginBottom="150dp"
             android:fontFamily="@font/roboto_bold"
             android:text="Negocio por defecto"
             android:textAlignment="center"
             android:textColor="@color/rojo"
             android:textSize="19dp"
-            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.363" />
+            app:layout_constraintTop_toTopOf="parent" />
 
         <ImageButton
             android:id="@+id/editBtn"
             android:layout_width="32dp"
             android:layout_height="32dp"
-            android:layout_marginStart="300dp"
-            android:layout_marginTop="7dp"
-            android:layout_marginEnd="5dp"
-            android:layout_marginBottom="172dp"
+            android:layout_marginStart="16dp"
+            android:background="@color/white"
             android:src="@drawable/pencil"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintBottom_toBottomOf="@+id/titleNeg"
+            app:layout_constraintStart_toEndOf="@+id/titleNeg"
+            app:layout_constraintTop_toTopOf="@+id/titleNeg"
+            app:layout_constraintVertical_bias="0.705"
             tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />
 
         <TextView
             android:id="@+id/descriptionNeg"
             android:layout_width="0dp"
-            android:layout_height="0dp"
-            android:layout_marginStart="16dp"
-            android:layout_marginTop="48dp"
-            android:layout_marginEnd="18dp"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="24dp"
             android:fontFamily="@font/roboto_regular"
             android:text="Inserte aquí una descripción apropiada para su negocio. El autor de las publicaciones que haga en el fragmento “publicaciones” será negocio que se registre en este fragment"
             android:textAlignment="center"
@@ -113,7 +58,16 @@
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:layout_constraintTop_toBottomOf="@+id/titleNeg" />
     </androidx.constraintlayout.widget.ConstraintLayout>
+
+    <ImageView
+        android:id="@+id/imageView"
+        android:layout_width="411dp"
+        android:layout_height="237dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="@drawable/img" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
