fragmento perfil terminado

--- a/app/src/main/res/layout/fragment_perfil_edit.xml
+++ b/app/src/main/res/layout/fragment_perfil_edit.xml
@@ -80,11 +80,12 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginStart="5dp"
-            android:layout_marginTop="10dp"
+            android:layout_marginTop="12dp"
             android:layout_marginEnd="5dp"
             android:background="@drawable/padding_containers"
             android:padding="22dp"
             app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="1.0"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/contrainstTitle3">
 
@@ -104,15 +105,19 @@
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
 
-            <ImageView
-                android:id="@+id/imageView"
-                android:layout_width="48dp"
-                android:layout_height="48dp"
-                android:layout_marginTop="41dp"
-                android:src="@drawable/camera"
+            <ImageButton
+                android:id="@+id/imgEditBtn"
+                android:layout_width="97dp"
+                android:layout_height="68dp"
+                android:layout_marginTop="20dp"
+                android:background="@color/white"
                 app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.501"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/titlePro2" />
+                app:layout_constraintTop_toBottomOf="@+id/titlePro2"
+                app:srcCompat="@drawable/camera"
+                tools:ignore="SpeakableTextPresentCheck" />
+
         </androidx.constraintlayout.widget.ConstraintLayout>
 
         <androidx.constraintlayout.widget.ConstraintLayout
