--- a/app/src/main/res/layout/fragment_publicaciones.xml
+++ b/app/src/main/res/layout/fragment_publicaciones.xml
@@ -42,6 +42,8 @@
                 android:layout_marginEnd="90dp"
                 android:layout_marginBottom="24dp"
                 android:text="Todavia no hay publicaciones"
+                android:textColor="@color/black"
+                android:textSize="20sp"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
