--- a/app/src/main/res/layout/fragment_perfil_edit.xml
+++ b/app/src/main/res/layout/fragment_perfil_edit.xml
@@ -57,19 +57,17 @@
                 android:id="@+id/descripcionText"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="28dp"
+                android:layout_marginTop="10dp"
                 android:background="@drawable/padding_edittext"
                 android:ems="10"
                 android:fontFamily="@font/roboto_regular"
+                android:gravity="start|top"
                 android:hint="Inserte aquí una descripción apropiada para su negocio. El autor de las publicaciones que haga en el fragmento “publicaciones” será negocio que se registre en este fragment"
-                android:inputType="textPersonName"
-                android:minHeight="48dp"
+                android:inputType="textMultiLine"
                 android:textAlignment="center"
                 android:textColor="@color/black"
-                android:textColorHint="@color/black"
-                android:textSize="18sp"
+                android:textColorHint="#706C6C"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="0.511"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/titlePro" />
 
@@ -161,7 +159,7 @@
                 android:minHeight="48dp"
                 android:textAlignment="center"
                 android:textColor="@color/black"
-                android:textColorHint="@color/black"
+                android:textColorHint="#706C6C"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/titlePro3" />
