--- a/app/src/main/res/layout/fragment_perfil_edit.xml
+++ b/app/src/main/res/layout/fragment_perfil_edit.xml
@@ -146,6 +146,7 @@
                 android:textColor="@color/rojo"
                 android:textSize="19dp"
                 app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.501"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
 
