--- a/app/src/main/res/drawable/padding_edittext.xml
+++ b/app/src/main/res/drawable/padding_edittext.xml
@@ -2,6 +2,6 @@
 <shape android:shape="rectangle"
     xmlns:android="http://schemas.android.com/apk/res/android">
     <corners android:radius="50px"/>
-    <solid android:color="#FAFAFA"/>
+    <solid android:color="@color/white"/>
     <stroke android:width="4px" android:color="@color/black"/>
 </shape>
