add_publicacion finished

--- a/app/src/main/res/layout/fragment_add_publicacion.xml
+++ b/app/src/main/res/layout/fragment_add_publicacion.xml
@@ -46,6 +46,7 @@
                 android:ems="10"
                 android:inputType="textPersonName"
                 android:minHeight="48dp"
+                android:textColor="@color/black"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
@@ -78,23 +79,25 @@
 
             <ImageButton
                 android:id="@+id/ubicacionBtn"
-                android:layout_width="69dp"
-                android:layout_height="58dp"
-                android:layout_marginStart="150dp"
+                android:layout_width="60dp"
+                android:layout_height="60dp"
+                android:layout_marginStart="32dp"
                 android:layout_marginTop="16dp"
-                android:layout_marginEnd="150dp"
+                android:layout_marginEnd="32dp"
                 android:background="@color/white"
+                android:contextClickable="false"
                 android:src="@drawable/mapa"
+                android:visibility="visible"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/textView3" />
 
             <TextView
-                android:id="@+id/textView4"
+                android:id="@+id/hayUbicacionTV"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="32dp"
-                android:layout_marginTop="32dp"
+                android:layout_marginTop="16dp"
                 android:layout_marginEnd="32dp"
                 android:layout_marginBottom="16dp"
                 android:text="Sin ubicación seleccionada"
