--- a/app/src/main/res/layout/fragment_add_publicacion.xml
+++ b/app/src/main/res/layout/fragment_add_publicacion.xml
@@ -46,6 +46,7 @@
                 android:ems="10"
                 android:inputType="textPersonName"
                 android:minHeight="48dp"
+                android:textAlignment="center"
                 android:textColor="@color/black"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -148,6 +149,7 @@
                 android:hint="Inicio"
                 android:inputType="text"
                 android:textAlignment="center"
+                android:textColor="@color/black"
                 android:textColorHint="@color/black"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toStartOf="@+id/finET"
@@ -165,6 +167,7 @@
                 android:hint="Fin"
                 android:inputType="text"
                 android:textAlignment="center"
+                android:textColor="@color/black"
                 android:textColorHint="@color/black"
                 app:layout_constraintBottom_toBottomOf="@+id/inicioET"
                 app:layout_constraintEnd_toEndOf="parent"
