--- a/app/src/main/res/layout/eventorow.xml
+++ b/app/src/main/res/layout/eventorow.xml
@@ -22,10 +22,11 @@
             android:id="@+id/inicio"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="90dp"
+            android:layout_marginStart="24dp"
             android:layout_marginTop="8dp"
             android:background="#FAFAFA"
             android:text="TextView"
+            android:textAlignment="viewStart"
             android:textColor="@color/black"
             android:textSize="16sp"
             app:layout_constraintStart_toStartOf="parent"
@@ -62,10 +63,11 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="8dp"
-            android:layout_marginEnd="90dp"
+            android:layout_marginEnd="24dp"
             android:layout_marginBottom="16dp"
             android:background="#FAFAFA"
             android:text="TextView"
+            android:textAlignment="textEnd"
             android:textColor="@color/black"
             android:textSize="16sp"
             app:layout_constraintBottom_toBottomOf="parent"
